crates/oxc_react_compiler/tests/snapshots/capturing-func-alias-captured-mutate-arr-iife.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-func-alias-captured-mutate-arr-iife.js
---
import { c as _c } from "react/compiler-runtime";
const { mutate } = require("shared-runtime");
function component(foo, bar) {
	const $ = _c(3);
	let y;
	if ($[0] !== bar || $[1] !== foo) {
		const x = { foo };
		y = { bar };
		const a = [y];
		const b = x;
		a.x = b;
		mutate(y);
		$[0] = bar;
		$[1] = foo;
		$[2] = y;
	} else {
		y = $[2];
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["foo", "bar"]
};
