crates/oxc_react_compiler/tests/snapshots/capturing-func-alias-receiver-mutate-iife.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-func-alias-receiver-mutate-iife.js
---
import { c as _c } from "react/compiler-runtime";
const { mutate } = require("shared-runtime");
function component(a) {
	const $ = _c(2);
	let y;
	if ($[0] !== a) {
		const x = { a };
		y = {};
		const a_0 = y;
		a_0.x = x;
		mutate(y);
		$[0] = a;
		$[1] = y;
	} else {
		y = $[1];
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["foo"]
};
